# eventmsg-adaptor

./: .editorconfig  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  Makefile  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
.gitlab/: dependabot.yml
docs/: CHANGELOG.md
eventmsg_adaptor/: __init__.py
eventmsg_adaptor/adapters/: __init__.py  base.py
eventmsg_adaptor/adapters/kafka/: utils.py  (+2 more)
eventmsg_adaptor/config/: __init__.py  kafka.py  sqs.py
eventmsg_adaptor/event_streams/: __init__.py  async_event_stream.py  base.py  event_stream.py
eventmsg_adaptor/schema/: __init__.py  callbacks.py  context.py  destination.py  event.py  listen_expression.py  listener.py  message.py
eventmsg_adaptor/serializers/: __init__.py  confluent_protobuf_serializer.py  protobuf_serializer.py  pydantic_serializer.py
eventmsg_adaptor/utils/: __init__.py
gambol/adapters/: __init__.py  base.py
gambol/schema/: __init__.py  destination.py  event.py  listen_expression.py  listener.py  message.py
gambol/serializers/: __init__.py  confluent_protobuf_serializer.py  protobuf_serializer.py  pydantic_serializer.py  serializer.py
gambol/utils/: __init__.py
msgsync/: strenum.py
msgsync/adapters/: __init__.py  base.py
msgsync/config/: __init__.py  sqs.py
msgsync/schema/: callbacks.py  listener.py  message.py
msgsync/serializers/: __init__.py  confluent_protobuf_serializer.py  protobuf_serializer.py  pydantic_serializer.py
msgsync/utils/: __init__.py
samples/: README.md  __init__.py  events.py
samples/aiokafka/: README.md  docker-compose.yml  publish.py  publish_using_schema_registry.py  publish_with_sasl_auth.py  subscribe.py  subscribe_with_sasl_auth.py
samples/sqs/: README.md  __init__.py  publish.py  publish_fifo.py  subscribe.py  subscribe_fifo.py
tests/: __init__.py  conftest.py
tests/adapters/: test_adapters.py  test_aiokafka_adaptor.py
tests/config/: test_sqs_config.py
tests/event_streams/: test_async_event_stream.py  test_event_stream.py
tests/schema/: test_destination.py  test_event.py  test_listen_expression.py  test_message.py
tests/serializers/: test_protobuf_confluent_serializer.py  test_protobuf_serializer.py  test_pydantic_serializer.py
tests/utils/: test_utils.py
(+9 files in other folders)
