[tool.poetry]
name = "eventmsg_adaptor"
# This version field is not being used. The version field is dynamically updated as below
version = "0.0.0"
description = "Event & Message adapter library & protocol & implementation over publisher/subscriber pattern"
authors = ["Sanctum Labs <sanctumlabs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = {version = "^1.28.49", optional = true}
pydantic = "^2.3.0"
aiokafka = {version = "^0.8.1", optional = true}
confluent-kafka = {version = "^2.2.0", optional = true}
orjson = "^3.9.7"
strenum = "^0.4.15"
sanctumlabs-messageschema = "^0.9.0"
types-protobuf = "^4.24.0.1"
boto3-stubs = {extras = ["sns", "sqs"], version = "^1.28.49"}
types-aiobotocore = {extras = ["sns"], version = "^2.6.0"}
requests = "^2.31.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
coverage = "^7.3.1"
pytest-asyncio = "^0.21.1"
python-dotenv = "^1.0.0"
time-machine = "^2.12.0"
black = "^23.9.1"
pylint = "^2.17.5"
pre-commit = "^3.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[tool.poetry.extras]
adapters = ["boto3", "aiobotocore", "aiokafka", "confluent-kafka"]

# reference: https://github.com/mtkennerly/poetry-dynamic-versioning
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
latest-tag = true
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "strenum.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiokafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kafka.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
